--- a/Menu System/Menu System.vcxproj
+++ b/Menu System/Menu System.vcxproj
@@ -115,6 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DynArray.h" />
+    <ClInclude Include="Main.h" />
+    <ClInclude Include="MenuSystem.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MenuSystem.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
